kubernetes/apps/default/frigate/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cctv.f9.casa`)
      kind: Rule
      services:
        - name: frigate
          port: 5000
      middlewares:
        - name: default-headers
          namespace: traefik
